# cinema-radar

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker  README.md  docker-compose.yml
.github/workflows/: deploy-pages.yml
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/analytics/: page.tsx
dashboard/src/app/cinemas/: page.tsx
dashboard/src/app/geography/: page.tsx
dashboard/src/app/movies/: page.tsx
dashboard/src/app/signals/: page.tsx
dashboard/src/components/: header.tsx  sidebar.tsx  signal-card.tsx  stat-card.tsx
dashboard/src/components/charts/: movie-race.tsx  movies-leaderboard.tsx  (+3 more)
dashboard/src/lib/: api.ts  mock-data.ts
services/api/: requirements.txt
services/api/app/: __init__.py  main.py
services/scheduler/: requirements.txt
services/scheduler/app/: __init__.py  main.py
services/worker/: requirements.txt
services/worker/app/: __init__.py  main.py
shared/: pyproject.toml
shared/shared/: __init__.py  settings.py
shared/shared/config/: __init__.py  sources.py
shared/shared/db/: __init__.py  database.py
shared/shared/db/models/: __init__.py  base.py  distributor.py  movie.py  screening.py  signal.py  source.py
shared/shared/db/repositories/: __init__.py  base.py  movies.py  signals.py  sources.py
shared/shared/queue/: __init__.py  client.py
shared/shared/schemas/: __init__.py  movie.py  signal.py  stats.py
supabase/migrations/: 001_initial_schema.sql  002_seed_data.sql
(+10 files in other folders)
