[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared library for Cinema Radar"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "arq>=0.26",
    "redis>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
